[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/LC_Crimbus/engine_room.png" type="Texture" id=1]
[ext_resource path="res://Levels/22.0 Crimbus/Arch.tscn" type="PackedScene" id=2]
[ext_resource path="res://BG.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/22.0 Crimbus/EngineRoom.gd" type="Script" id=6]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/LC_Crimbus/robot_poet1.png" type="Texture" id=8]
[ext_resource path="res://sprites/LC_Crimbus/robot_poet0.png" type="Texture" id=9]
[ext_resource path="res://sprites/LC_Crimbus/robot_poet2.png" type="Texture" id=10]
[ext_resource path="res://sprites/LC_Crimbus/robot_poet3.png" type="Texture" id=11]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ) ],
"loop": true,
"name": "satisfied",
"speed": 4.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "writing",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128.449, 41.5426 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 100.02, 39.2759 )

[node name="EngineRoom" type="Node2D"]
script = ExtResource( 6 )

[node name="engine_room" type="Sprite" parent="."]
position = Vector2( 37.4832, -20.4273 )
texture = ExtResource( 1 )

[node name="BG" parent="." instance=ExtResource( 3 )]
margin_left = -1351.69
margin_top = -997.773
margin_right = 1470.31
margin_bottom = 1107.23

[node name="PuppyCamera" parent="." instance=ExtResource( 4 )]

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -1256.6, -917.369 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1347.73, 909.732 )

[node name="BottomSP" parent="." instance=ExtResource( 5 )]
position = Vector2( -2.14001, 665.713 )

[node name="TopSP" parent="." instance=ExtResource( 5 )]
position = Vector2( 167.952, 144.404 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 2.30878, 258.587 )

[node name="Arch" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 4.62421, 757.819 )

[node name="SnootyBot" type="Node2D" parent="YSort"]
position = Vector2( -198.141, 193.33 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="YSort/SnootyBot"]
position = Vector2( 19.3151, -33.8015 )
frames = SubResource( 1 )
animation = "writing"
playing = true
flip_h = true

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/SnootyBot"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/SnootyBot/StaticBody2D"]
polygon = PoolVector2Array( -52.4925, 16.9712, 24.7681, 61.6375, 79.0919, 47.1511, 1.83136, 8.52084 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -1.91046, 0 )
polygon = PoolVector2Array( 142.021, 57.3108, 80.8872, 42.0273, 75.1559, 87.8776, -3.17157, 137.549, -125.439, 110.803, -165.558, 47.7587, -178.931, -307.581 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D4"]
polygon = PoolVector2Array( -165.558, 45.8482, -312.661, 103.161, -364.242, 238.801, -583.942, -133.732 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
polygon = PoolVector2Array( 239.453, 103.161, 336.884, 171.936, 363.63, 265.547, 734.253, -85.9713 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
polygon = PoolVector2Array( -354.69, 244.533, -249.617, 361.069, -85.32, 399.277, -94.8397, 770.403 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D5"]
polygon = PoolVector2Array( 369.945, 252.911, 283.696, 358.326, 89.6367, 425.409, 82.4493, 777.591 )

[node name="bottomTZ" parent="." instance=ExtResource( 12 )]
position = Vector2( -2.70233, 792.68 )

[node name="CollisionShape2D" parent="bottomTZ" index="0"]
shape = SubResource( 2 )

[node name="topTZ" parent="." instance=ExtResource( 12 )]
position = Vector2( 206.108, 2.78932 )

[node name="CollisionShape2D" parent="topTZ" index="0"]
rotation = 0.405208
shape = SubResource( 3 )
[connection signal="transition_triggered" from="bottomTZ" to="." method="_on_bottomTZ_transition_triggered"]
[connection signal="transition_triggered" from="topTZ" to="." method="_on_topTZ_transition_triggered"]

[editable path="PuppyCamera"]

[editable path="bottomTZ"]

[editable path="topTZ"]
